--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -1,11 +1,78 @@
 {% extends "blog/base.html" %}
 
+
+
 {% block title %}{{ post.title }}{% endblock %}
 
+
+
 {% block content %}
+
+
   <h1>{{ post.title }}</h1>
   <p class="date">
     Published {{ post.publish }} by {{ post.author }}
   </p>
   {{ post.body|linebreaks }}
+    <p>
+  <a href="{% url "blog:post_share" post.id %}">
+    Share this post
+  </a>
+    </p>
+
+
+    <h2>Similar posts</h2>
+  {% for post in similar_posts %}
+    <p>
+      <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+    </p>
+  {% empty %}
+    There are no similar posts yet.
+  {% endfor %}
+
+
+{#    使用Django ORM执行comments.count() 查询集（QuerySet）。#}
+{#    注意，Django模板（template）语言中不使用圆括号来调用方法。#}
+{#    {% with %} 标签（tag）允许我们分配一个值给新的变量，这个变量可以一直使用直到遇到{% endwith %}标签（tag）#}
+
+
+
+
+    {% with comments.count as total_comments %}
+  <h2>
+{#  pluralize模板（template）过滤器（filter）在值不为1时，会在值的末尾显示一个"s"。#}
+{#  之前的文本将会被渲染成类似：0 comments, 1 comment 或者 N comments#}
+    {{ total_comments }} comment{{ total_comments|pluralize }}
+  </h2>
+    {% endwith %}
+
+
+    {% for comment in comments %}
+  <div class="comment">
+    <p class="info">
+      Comment {{ forloop.counter }} by {{ comment.name }}
+      {{ comment.created }}
+    </p>
+    {{ comment.body|linebreaks }}
+  </div>
+    {% empty %}
+      <p>There are no comments yet.</p>
+    {% endfor %}
+
+
+
+    {% if new_comment %}
+        <h2>Your comment has been added.</h2>
+    {% else %}
+      <h2>Add a new comment</h2>
+      <form action="." method="post">
+        {{ comment_form.as_p }}
+        {% csrf_token %}
+        <p><input type="submit" value="Add comment"></p>
+      </form>
+    {% endif %}
+
+
+
+
 {% endblock %}
