--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,14 +1,32 @@
 {% extends "blog/base.html" %}
 
-{% block title %}My Blog{% endblock %}
+{% block title %}My Site{% endblock %}
 
 {% block content %}
-  <h1>My Blog</h1>
+  <h1>My Site</h1>
+
+    {% if tag %}
+      <h2>Posts tagged with "{{ tag.name }}"</h2>
+    {% endif %}
+
+
   {% for post in posts %}
     <h2>
       <a href="{{ post.get_absolute_url }}">
         {{ post.title }}
       </a>
+{#  join模板（template）过滤器（filter）的功能类似python字符串的join()方法，将给定的字符串连接起来#}
+{#        <p class="tags">Tags: {{ post.tags.all|join:", " }}</p>#}
+
+    <p class="tags">
+      Tags:
+      {% for tag in post.tags.all %}
+        <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+          {{ tag.name }}
+        </a>
+        {% if not forloop.last %}, {% endif %}
+      {% endfor %}
+    </p>
     </h2>
     <p class="date">
       Published {{ post.publish }} by {{ post.author }}
@@ -19,5 +37,5 @@
     {{ post.body|truncatewords:30|linebreaks }}
   {% endfor %}
 {#    旧的分页器{% include "pagination.html" with page=posts %}  #}
-    {% include "pagination.html" with page=page_obj %}
+    {% include "pagination.html" with page=posts  %}
 {% endblock %}
